# rename-photos

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README_CN.md  README_EN.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.mjs  prettier.config.mjs  tailwind.config.mjs  tailwind.config.ts  tsconfig.json  vite.config.ts
.codex/skills/release-rename-photos/: SKILL.md
.github/workflows/: deploy-web-pages.yml  github-ci.yml  publish-tauri-release.yml.yml  website.yml
docs/: core-logic.md  core-logic_CN.md
scripts/: extract-release-notes.mjs
src/: App.tsx  main.tsx  styles.css  tauri.d.ts
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file.rs  file_lib.rs  files_api.rs  main.rs
src-tauri/src/commands/: file.rs
src-tauri/src/commands/file/: types.rs
src-tauri/src/utils/: file.rs
src-tauri/src/utils/file/: check.rs  exif.rs  filter.rs  kind.rs  metadata_image.rs  metadata_video.rs
src-tauri/src/utils/file/image_exif/: mod.rs  raw_fallback.rs
src/components/: DropArea.tsx  DropGuide.tsx  DropModal.tsx  FileView.tsx  FilesTable.tsx  OpenFolder.tsx  OperationBar.tsx  RenameOperator.tsx  SelectFolder.tsx  Settings.tsx
src/components/base/: BaseTag.tsx
src/components/icon/: index.tsx
src/components/settings/: About.tsx  Basic.tsx  CheckForUpdates.tsx  HelpDoc.tsx  Settings.tsx  SettingsTrigger.tsx  SponsorModal.tsx
src/const/: index.ts
src/hooks/: index.ts  useDragging.ts  useError.ts  useFiles.ts  useInputFormat.ts  useSettingsVisible.ts
src/locales/: en-us.ts  en.json  i18n.ts  zh-cn.ts  zh.json
src/services/: storage.ts
src/store/: useConfigStore.ts
src/types/: file.d.ts  rust.d.ts
src/util/: check-for-updates.ts  common.test.ts  common.ts  file-transformer.test.ts  file-transformer.ts  index.ts  storage.ts
web/: next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/assets/: loader.ts
web/src/components/: download-links.tsx  icon.tsx  mac-shot.tsx
web/src/hooks/: index.ts  useFullPage.ts
web/src/utils/: index.ts  scrollTo.ts
(+4 files in other folders)
