[package]
name = "rename-photos"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.12", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc.15", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0.0-rc.3"
tauri-plugin-dialog = "2.0.0-rc.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
kamadak-exif = "0.5.5"
nom-exif = "2.1.0"
chrono = "0.4.38"
